--- a/source/scss/main.scss
+++ b/source/scss/main.scss
@@ -35,7 +35,11 @@ html, body {
 	padding: 10px;
 	height: 50px;
 }
-
+/* fake link style for home page */
+#home-link {
+	color: #8A8E82;
+	text-decoration: underline;
+}
 
 /* GENERAL MEDIA QUERIES */
 @media (max-width: $screen-sm-min) {
