Dropdown menu on mobile.

--- a/src/index.pug
+++ b/src/index.pug
@@ -19,13 +19,14 @@ html(lang='en')
           div(id="nav-title")
             h1 Rex Twedt
             h2 Medical Illustration
-        button(type="button" class="nav-toggle collapsed")
-          span(class="sr-only") Toggle navigation
+
+        button(type="button" class="nav-toggle closed")
+          span(class="screen-reader") Toggle navigation
           div(class="bars")
           div(class="bars")
           div(class="bars")
 
-      div(class="nav-collapse")
+      div(class="nav-collapse closed")
         div(class="nav-menu-item")
           a(href="#projects" id="projects-link") Projects
         div(class="nav-menu-item")
