--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -19,6 +19,15 @@ html, body
 	font-family serif
 	color #222
 
+// Screen Readers
+.screen-reader
+	position absolute
+	left -10000px
+	top auto
+	width 1px
+	height 1px
+	overflow hidden
+
 
 /* PAGE SKELETON */
 
