--- a/src/index.pug
+++ b/src/index.pug
@@ -20,13 +20,13 @@ html(lang='en')
             h1 Rex Twedt
             h2 Medical Illustration
 
-        button(type="button" class="nav-toggle closed")
+        button(type="button" class="nav-toggle open")
           span(class="screen-reader") Toggle navigation
           div(class="bars")
           div(class="bars")
           div(class="bars")
 
-      div(class="nav-collapse closed")
+      div(class="nav-collapse" data-collapsed="false")
         div(class="nav-menu-item")
           a(href="#projects" id="projects-link") Projects
         div(class="nav-menu-item")
