--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -32,19 +32,14 @@ html, body
 /* PAGE SKELETON */
 
 /* main minimum height of content the full height of the page */
-.main
-	min-height calc(100% - 158px)
-
-#content
-	background-color #fff
-	padding 10px
+.main-content
+	min-height calc(100% - 124px)
+	width 100%
 
 #copyright
-	position absolute
-	bottom 0
 	width 100%
 	font-size 16px
-	color #3B473D
+	color #bcbcbc
 	text-align center
 	padding 10px 0
 
@@ -54,8 +49,9 @@ html, body
 	text-decoration underline
 
 /* MEDIA QUERIES */
-@media (max-width: $screen-sm-min)
-	// Add horizontal space around containers on phone screens
-	.container
-		padding-left 20px
-		padding-right 20px
+
+// // Add horizontal space around containers on phone screens
+// @media (max-width: $screen-sm-min)
+// 	.container
+// 		padding-left 20px
+// 		padding-right 20px
