Mobile first styling.

--- a/src/index.pug
+++ b/src/index.pug
@@ -13,30 +13,32 @@ html(lang='en')
 
   body
     nav(class="nav")
-      div(class="nav-header")
-        div(class="nav-logo")
-          img(src="./img/nav-logo.png" alt="logo")
-          div(id="nav-title")
-            h1 Rex Twedt
-            h2 Medical Illustration
+      div(class="nav-wrap")
+        div(class="nav-header")
+          div(class="nav-logo")
+            img(src="./img/nav-logo.png" alt="logo")
+            div(id="nav-title")
+              h1 Rex Twedt
+              h2 Medical Illustration
 
-        button(type="button" class="nav-toggle open")
-          span(class="screen-reader") Toggle navigation
-          div(class="bars")
-          div(class="bars")
-          div(class="bars")
+          button(type="button" class="nav-toggle open")
+            span(class="screen-reader") Toggle navigation
+            div(class="bars")
+            div(class="bars")
+            div(class="bars")
 
-      div(class="nav-collapse" data-collapsed="false")
-        div(class="nav-menu-item")
-          a(href="#projects" id="projects-link") Projects
-        div(class="nav-menu-item")
-          a(href="#gallery" id="gallery-link") Gallery
-        div(class="nav-menu-item")
-          a(href="#about" id="about-link") About
-        div(class="nav-menu-item")
-          a(href="#contact" id="contact-link") Contact
+        div(class="nav-collapse" data-collapsed="false")
+          div(class="nav-menu-item")
+            a(href="#projects" id="projects-link") Projects
+          div(class="nav-menu-item")
+            a(href="#gallery" id="gallery-link") Gallery
+          div(class="nav-menu-item")
+            a(href="#about" id="about-link") About
+          div(class="nav-menu-item")
+            a(href="#contact" id="contact-link") Contact
 
-    div(class="main-content")
+    section(class="main-content")
+      div(class="content-wrap")
 
     footer
       div(id="copyright") Copyright &#169; 
