--- a/src/styles/navbar.styl
+++ b/src/styles/navbar.styl
@@ -5,120 +5,134 @@
 
 .nav
   width 100%
-  position relative
-  display flex
-  justify-content space-between
   box-shadow 2px 2px 8px #e3e3e3
 
-  /* ** logo ** */
-
-  .nav-header
-    padding 0
-    height 84px
-    position relative
-
-    .nav-logo
-      height 100%
-      display flex
-      align-items center
-      flex-flow row nowrap
-      img
-        height 90%
-
-      #nav-title
-        h1
-          font-size 24px
-          margin 4px
-        h2
-          font-size 16px
-          font-style italic
-          margin 4px
-
-
-  /* ** links ** */
-
-  .nav-collapse
-    border none
-    font-size 20px
+  .nav-wrap
+    width 100%
     display flex
-    overflow hidden
-    transition height 0.2s ease-out
-
-    .nav-menu-item
-      flex 1 auto
-      display flex
-      align-items center
-      padding 16px
-      a
-        color #bbb
-        text-decoration none
-
-    .nav-menu-item
-      &:hover
-        cursor pointer
-        a
-          color #aaa
-          text-shadow 2px 1px 4px #eee
-          transition all 0.2s ease-out
-
-  /* ** mobile ** */
-
-  .nav-toggle
-    display none
-    position absolute
-    right 2%
-    top 50%
-    transform translate(0, -50%)
-    border none
-    padding 4px
-    width 40px
-    height 40px
-    background-color #eee
-    .bars
-      width 80%
-      height 2px
-      margin 4px
-      background-color #969696
-    &:hover
-      cursor pointer
-  .nav-toggle.closed
-      background-color #aaa
-      &:hover
-        background-color #bbb
-        transition all 0.2s ease-out
-        .bars
-          background-color #888
-          transition all 0.2s ease-out
-  .nav-toggle.open
-      background-color #ccc
-      &:hover
-        background-color #bbb
-        transition all 0.2s ease-out
-        .bars
-          background-color #888
-          transition all 0.2s ease-out
-
-// Media queries
-@media (max-width: 1200)
-  li
-    padding 0px
-
-@media screen and (max-width: 600px)
-  .nav
+    flex 1 100%
     flex-direction column
-    box-shadow 2px 2px 8px #e3e3e3
+    position relative
+    justify-content space-between
+    max-width 864px
+    margin auto
+
+    /***** LOGO *****/
 
     .nav-header
-      flex 1 100%
+      padding 0
+      height 84px
+      position relative
+
+      .nav-logo
+        height 100%
+        display flex
+        align-items center
+        flex-flow row nowrap
+        img
+          height 90%
+
+        #nav-title
+          h1
+            font-size 24px
+            margin 4px
+          h2
+            font-size 16px
+            font-style italic
+            margin 4px
+
+
+    /***** MOBILE TOGGLE *****/
 
     .nav-toggle
       display block
+      position absolute
+      right 2%
+      top 50%
+      transform translate(0, -50%)
+      border 1px solid #bcbcbc
+      border-radius 8px
+      padding 4px
+      width 40px
+      height 40px
+      background-color #eee
+      .bars
+        width 80%
+        height 2px
+        margin 4px
+        background-color #969696
+      &:hover
+        cursor pointer
+    .nav-toggle.closed
+        background-color #aaa
+        &:hover
+          background-color #bbb
+          transition all 0.2s ease-out
+          .bars
+            background-color #888
+            transition all 0.2s ease-out
+    .nav-toggle.open
+        background-color #ccc
+        &:hover
+          background-color #bbb
+          transition all 0.2s ease-out
+          .bars
+            background-color #888
+            transition all 0.2s ease-out
+
+
+    /***** COLLAPSIBLE PANEL / LINKS *****/
 
     .nav-collapse
+      border none
+      font-size 20px
+      display flex
       flex-direction column
-      border-top 1px solid #e3e3e3
-      border-bottom 1px solid #e3e3e3
+      overflow hidden
+      transition height 0.2s ease-out
 
       .nav-menu-item
         flex 1 100%
         padding 8px 12px
+        display flex
+        align-items center
+        a
+          color #bbb
+          text-decoration none
+
+      .nav-menu-item
+        &:hover
+          cursor pointer
+          a
+            color #aaa
+            text-shadow 2px 1px 4px #eee
+            transition all 0.2s ease-out
+
+
+
+/***** MEDIA QUERIES *****/
+
+@media screen and (min-width: 584px)
+  .nav
+    background-color #513AA2
+
+    .nav-wrap
+      background-color #8173B1
+      flex-direction row
+  
+      .nav-toggle
+        display none
+  
+      .nav-collapse
+        flex-direction row
+  
+        .nav-menu-item
+          flex 1 auto
+          padding 16px
+  
+@media screen and (min-width: 864px)
+  .nav
+    background-color #61B13C
+
+    .nav-wrap
+      background-color #91BC7D
