--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -4,11 +4,9 @@
  */
 
 @import "./navbar";
-// @import "images";
-// @import "contact-form";
 
 
-/* DEFAULT SETTINGS */
+/***** DEFAULT SETTINGS *****/
 
 html, body
   width 100%
@@ -19,7 +17,8 @@ html, body
 	font-family serif
 	color #222
 
-// Screen Readers
+/***** SCREEN READERS *****/
+
 .screen-reader
 	position absolute
 	left -10000px
@@ -29,12 +28,18 @@ html, body
 	overflow hidden
 
 
-/* PAGE SKELETON */
+/***** PAGE SKELETON *****/
 
 /* main minimum height of content the full height of the page */
 .main-content
-	min-height calc(100% - 124px)
+	background-color #D29B8C
+	min-height calc(100% - 122px)
 	width 100%
+	.content-wrap
+		background-color #DDCBC6
+		padding 8px 16px
+		max-width 864px
+		margin auto
 
 #copyright
 	width 100%
@@ -43,15 +48,20 @@ html, body
 	text-align center
 	padding 10px 0
 
-/* fake link style for home page */
-#home-link
-	color #8A8E82
-	text-decoration underline
 
-/* MEDIA QUERIES */
+/***** MEDIA QUERIES *****/
 
 // // Add horizontal space around containers on phone screens
-// @media (max-width: $screen-sm-min)
-// 	.container
-// 		padding-left 20px
-// 		padding-right 20px
+@media screen and (min-width: 584px)
+	.main-content
+		background-color #7A3AA2
+		.content-wrap
+			background-color #9574A9
+			padding 8px
+
+@media screen and (min-width: 864px)
+	.main-content
+		background-color #A23A7E
+		.content-wrap
+			background-color #B0719A
+
