Menu should start closed.

--- a/src/index.pug
+++ b/src/index.pug
@@ -21,13 +21,13 @@ html(lang='en')
               h1 Rex Twedt
               h2 Medical Illustration
 
-          button(type="button" class="nav-toggle open")
+          button(type="button" class="nav-toggle closed")
             span(class="screen-reader") Toggle navigation
             div(class="bars")
             div(class="bars")
             div(class="bars")
 
-        div(class="nav-collapse" data-collapsed="false")
+        div(class="nav-collapse" data-collapsed="true")
           div(class="nav-menu-item")
             a(href="#projects" id="projects-link") Projects
           div(class="nav-menu-item")
