--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -41,6 +41,14 @@ html, body
 		padding 8px 16px
 		max-width 864px
 		margin auto
+		opacity 1
+		transition opacity 0.2s ease-out
+	.content-wrap.fade-out
+		opacity 0
+		transition opacity 0.2s ease-out
+	// .content-wrap.fade-in
+	// 	opacity 1
+	// 	transition opacity 0.2s ease-out
 
 #copyright
 	width 100%
