Simplify the link elements in the navbar.

--- a/src/index.pug
+++ b/src/index.pug
@@ -28,19 +28,15 @@ html(lang="en")
             div(class="bars")
 
         div(class="nav-collapse" data-collapsed="true")
-          div(class="nav-menu-item")
-            a(href="#projects" id="projects-link") Projects
-          div(class="nav-menu-item")
-            a(href="#gallery" id="gallery-link") Gallery
-          div(class="nav-menu-item")
-            a(href="#about" id="about-link") About
-          div(class="nav-menu-item")
-            a(href="#contact" id="contact-link") Contact
+          a(href="#projects" class="nav-menu-item" id="projects-link") Projects
+          a(href="#gallery" class="nav-menu-item" id="gallery-link") Gallery
+          a(href="#about" class="nav-menu-item" id="about-link") About
+          a(href="#contact" class="nav-menu-item" id="contact-link") Contact
 
     section(class="main-content")
       div(class="content-wrap")
 
     footer
-      div(id="copyright") Copyright &#169; 
+      div(id="copyright") Copyright &#169;
         span(id="copyright-year") 1988
         |  Rex Twedt III
