Styles for projects page.

--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -5,17 +5,20 @@
 
 @import "./images";
 @import "./navbar";
+@import "./projects";
 @import "./contact-form";
 
 
 /***** DEFAULT SETTINGS *****/
 
+*, html, body
+  box-sizing border-box
+  margin 0
+  padding 0
+
 html, body
   width 100%
   height 100%
-  margin 0
-  padding 0
-  box-sizing border-box
 	font-family serif
 	color #222
 
