--- a/src/styles/navbar.styl
+++ b/src/styles/navbar.styl
@@ -15,6 +15,7 @@
     position relative
     justify-content space-between
     max-width 864px
+    padding 0 12px
     margin auto
 
     /***** LOGO *****/
