Tweak the height of the header and footer.

--- a/src/styles/navbar.styl
+++ b/src/styles/navbar.styl
@@ -22,7 +22,7 @@
 
     .nav-header
       padding 0
-      height 84px
+      height 72px
       position relative
 
       .nav-logo
@@ -36,11 +36,13 @@
         #nav-title
           h1
             font-size 24px
-            margin 4px
+            margin-left 4px
+            padding 0
           h2
             font-size 16px
             font-style italic
-            margin 4px
+            margin-left 4px
+            padding 0
 
 
     /***** MOBILE TOGGLE *****/
