--- a/src/styles/projects.styl
+++ b/src/styles/projects.styl
@@ -45,24 +45,23 @@ h1
       transition all 0.2s ease-out
 
     .project-img
-      flex 0 0 200px
+      flex 1
       display flex
       align-items center
       justify-content center
-      width 200px
       height 200px
+      overflow hidden
       position relative
       border 1px solid red
 
       img
-        max-width 90%
-        max-height 90%
+        width 100%
         box-shadow 1px 1px 2px #bcbcbc
 
     .project-content
-      flex 0 1 auto
+      flex 1
       align-content center
-      padding 8px
+      padding 16px
       border 1px solid green
 
       h1,
