More tweaking to the 'Projects' page layout.

--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -40,6 +40,7 @@ html, body
 	background-color #D29B8C
 	min-height calc(100% - 102px)
 	width 100%
+	min-width 364px
 	.content-wrap
 		background-color #DDCBC6
 		padding 8px 16px
@@ -57,6 +58,7 @@ html, body
 	color #bcbcbc
 	text-align center
 	padding 6px 0
+	min-width 364px
 
 
 /***** MEDIA QUERIES *****/
