Initial commit of a react app version of the site.

--- a/src/index.pug
+++ b/src/index.pug
@@ -12,31 +12,5 @@ html(lang="en")
     title Rex Twedt Medical Illustration
 
   body
-    nav(class="nav")
-      div(class="nav-wrap")
-        div(class="nav-header")
-          div(class="nav-logo")
-            img(src="./img/nav-logo.png" alt="logo")
-            div(id="nav-title")
-              h1 Rex Twedt
-              h2 Medical Illustration
-
-          button(type="button" class="nav-toggle closed")
-            span(class="screen-reader") Toggle navigation
-            div(class="bars")
-            div(class="bars")
-            div(class="bars")
-
-        div(class="nav-collapse" data-collapsed="true")
-          a(href="#projects" class="nav-menu-item" id="projects-link") Projects
-          a(href="#gallery" class="nav-menu-item" id="gallery-link") Gallery
-          a(href="#about" class="nav-menu-item" id="about-link") About
-          a(href="#contact" class="nav-menu-item" id="contact-link") Contact
-
-    section(class="main-content")
-      div(class="content-wrap")
-
-    footer
-      div(id="copyright") Copyright &#169;
-        span(id="copyright-year") 1988
-        |  Rex Twedt III
+    noscript Please enable JavaScript to enjoy the content on this site!
+    div(class="app")
