--- a/src/styles/projects-list.styl
+++ b/src/styles/projects-list.styl
@@ -1,5 +1,5 @@
 /*
- * Projects List and Detail www.rextwedt.com
+ * Projects List www.rextwedt.com
  * Copyright Rex Twedt 2019
  */
 
@@ -61,6 +61,9 @@ h1
       border-radius 12px 12px 0 0
       overflow hidden
       position relative
+      background-size cover
+      background-repeat no-repeat
+      background-position center
       border 1px solid red
 
       img
