--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -3,9 +3,14 @@
  * Copyright Rex Twedt 2019
  */
 
-@import "./images";
 @import "./navbar";
-@import "./projects";
+@import "./footer";
+
+@import "./home";
+@import "./projects-list";
+@import "./project-detail";
+@import "./gallery";
+@import "./about";
 @import "./contact-form";
 
 
@@ -16,7 +21,7 @@
   margin 0
   padding 0
 
-html, body
+html, body, .app
   width 100%
   height 100%
 	font-family serif
@@ -37,34 +42,52 @@ html, body
 
 /* main minimum height of content the full height of the page */
 .main-content
+	position relative
 	background-color #D29B8C
-	min-height calc(100% - 102px)
+	min-height calc(100% - 96px)
 	width 100%
 	min-width 364px
+	overflow-y scroll
 	.content-wrap
+		position absolute
+		transform translate(50%, 0)
+		top 0
+		right 50%
 		background-color #DDCBC6
 		padding 8px 16px
+		width 100%
 		max-width 864px
 		margin auto
-		opacity 1
-		transition opacity 0.2s ease-out
-	.content-wrap.fade-out
+	.content-wrap.fade-enter
 		opacity 0
-		transition opacity 0.2s ease-out
+		z-index 1
+	.content-wrap.fade-enter-active
+		opacity 1
+		transition opacity 0.32s ease-out
+	.content-wrap.fade-exit
+		opacity 1
+	.content-wrap.fade-exit-active
+		opacity 0
+		transition opacity 0.32s ease-out
 
-#copyright
-	width 100%
-	font-size 16px
-	color #bcbcbc
-	text-align center
-	padding 6px 0
-	min-width 364px
+
+/***** CUSTOM SCROLLBAR *****/
+
+.main-content::-webkit-scrollbar
+	width 8px
+		
+.main-content::-webkit-scrollbar-track
+	-webkit-box-shadow inset 0 0 6px rgba(0,0,0,0.3)
+
+.main-content::-webkit-scrollbar-thumb
+  background-color #222
+  outline 1px solid #222
 
 
 /***** MEDIA QUERIES *****/
 
 // // Add horizontal space around containers on phone screens
-@media screen and (min-width: 584px)
+@media screen and (min-width 584px)
 	.main-content
 		background-color #7A3AA2
 		.content-wrap
