--- a/src/styles/gallery.styl
+++ b/src/styles/gallery.styl
@@ -11,34 +11,59 @@
 	align-content center
 	align-items center
 	justify-content space-around
-	// background #04171D
 	background #eee
 	border-radius 4px
-	// box-shadow 2px 2px 2px #3B473D
 	margin 8px
 	padding 12px
 	border 1px solid yellow
 
+	h2
+		width 100%
+		padding 2px 12px 8px 12px
+
 	.gallery-img-wrap
 		flex 0 0 auto
 		display inline-block
-		width 240px
-		height 240px
+		width 210px
+		height 210px
 		overflow hidden
+		position relative
 		background green
-		// background #04171D
 		border-radius 8px
 		box-shadow 2px 2px 2px #3B473D
 		margin 4px auto
 		border 1px solid red
-		img
+
+		.gallery-img-link
+			width 100%
+			height 100%
+
+		.gallery-img
 			width 96%
+			height 96%
+			border-radius 6px
+			overflow hidden
+			position absolute
+			top 50%
+			left 50%
+			transform translate(-50%, -50%)
+			background-size cover
+			background-repeat no-repeat
+			background-position center
+			border 1px solid purple
+			transition all 0.2s ease-out
 			&:hover
-				width 102%
-				height auto
-				-webkit-transition all 0.5s ease-out
-				transition all 0.5s ease-out
-	.first
-		margin-left 7px
-	.last
-		margin-left 0px
+				width 98%
+				height 98%
+		    transition all 0.2s ease-out
+
+
+/***** MEDIA QUERIES *****/
+
+@media screen and (min-width 584px)
+	.gallery-wrap
+		background-color #7A3AA2
+
+@media screen and (min-width: 960px)
+	.gallery-wrap
+		background-color #A23A7E
